resources/sass/_markdown.scss
.tw-markdown-content {
    background-color: white;
    // max-width: 960px;
    height: 100%;
    // max-height: 95vh;
    // overflow: auto;
    margin: auto;
    font-family: 'Nunito';
    line-height: 1.7;
    border-radius: 4px;
    h1 {
        font-weight: bold;
        font-size: 2.4rem;
    }
    h2 { font-weight: bold; font-size: 2rem; }
    h3, h4, h5, h6 {
        font-weight: bold;
        font-size: 1rem;
    }
    p {
        padding: 10px 0;
    }
    strong {
        font-weight: bold;
    }
    ul, ol {
        display: flex; flex-direction: column;
        li {
            padding: 7px 0;
            margin-left: 7px;
            list-style-type: square;
        }
    }
    blockquote {
        background: #f9f9f9;
        border-left: 10px solid #F6AE2D;
        margin: 10px 0;
        padding: 0.5em 10px;
        quotes: "\201C""\201D""\2018""\2019";
        p {
            display: inline;
        }
    }
    blockquote:before {
        color: #ccc;
        content: open-quote;
        font-size: 1rem;
        line-height: 2;
        font-style: italic;
    }
    hr {
        border: none;
        height: 5px;
        background: linear-gradient(to right, #ff7e5f, #F6AE2D);
        max-width: 70%;
        border-radius: 0 15px 0 15px;
        margin: 20px 0;
    }
}

